fix: hide scrollbar

--- a/src/index.css
+++ b/src/index.css
@@ -16,3 +16,13 @@ html {
   font-family: "Archivo", "Inter", "Roboto", sans-serif;
   scroll-behavior: smooth;
 }
+
+*::-webkit-scrollbar {
+  display: none;
+}
+
+/* Hide scrollbar for IE, Edge and Firefox */
+* {
+  -ms-overflow-style: none;  /* IE and Edge */
+  scrollbar-width: none;  /* Firefox */
+}
